--- a/index.html
+++ b/index.html
@@ -7,3 +7,8 @@
     <link rel="stylesheet" href="/SIGN-UP/style.scss">
     <title>CBC Sign-In</title>
 </head>
+
+<body>
+    
+    <!-- Left Section -->
+    <section class="text">
