--- a/index.html
+++ b/index.html
@@ -12,3 +12,9 @@
     
     <!-- Left Section -->
     <section class="text">
+
+ <!-- Top -->
+        <div class="head">
+            <a href="#"><img src="" alt="CBC LOGO"></a> <!-- Top -->
+        <div class="head">
+            <a href="#"><img src="" alt="CBC LOGO"></a>
