--- a/index.html
+++ b/index.html
@@ -18,3 +18,8 @@
             <a href="#"><img src="" alt="CBC LOGO"></a> <!-- Top -->
         <div class="head">
             <a href="#"><img src="" alt="CBC LOGO"></a>
+            
+ <h2>Create an account</h2>
+
+            <p>Create your account to manage other accounts here</p> 
+        </div>
