--- a/index.html
+++ b/index.html
@@ -23,3 +23,10 @@
 
             <p>Create your account to manage other accounts here</p> 
         </div>
+            
+  <!-- Form -->
+        <form>
+            <label for="username">Username</label>
+            <br>
+            <input type="text" name="" id="username" placeholder="Username">
+            <br>
