--- a/index.html
+++ b/index.html
@@ -30,3 +30,9 @@
             <br>
             <input type="text" name="" id="username" placeholder="Username">
             <br>
+            
+<label for="email">Email</label>
+            <br>
+            <input type="email" name="" id="email" placeholder="Enter your email">
+            <br>
+            
