--- a/index.html
+++ b/index.html
@@ -36,3 +36,8 @@
             <input type="email" name="" id="email" placeholder="Enter your email">
             <br>
             
+   <label for="number">Phone Number</label>
+            <br>
+            <input type="tel" name="" id="number" placeholder="Get Code">
+            <br>
+            
