--- a/index.html
+++ b/index.html
@@ -56,4 +56,13 @@
 
         </div>
             
-            
+   
+    </section>
+
+    <!-- Right Section -->
+    <section class="image">
+
+    </section>
+
+</body>
+</html>         
